--- a/Gra 3D/Assembly-CSharp.Player.csproj
+++ b/Gra 3D/Assembly-CSharp.Player.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshSpawner.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
+    <Compile Include="Assets\Scripts\Ufo\Pendrive.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\NPCDialogue.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
@@ -88,6 +89,8 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark03.cs" />
     <Compile Include="Assets\Scripts\Open Box.cs" />
     <Compile Include="Assets\Scripts\Ufo animation.cs" />
+    <Compile Include="Assets\Scripts\Forest\MinimapTextureSwitcher.cs" />
+    <Compile Include="Assets\Scripts\Forest\LoadUfo.cs" />
     <Compile Include="Assets\Scripts\Forest\KolorŚcieżki.cs" />
     <Compile Include="Assets\Megapoly.Art\Vintage Controls\Scripts\ControlAnimateLights.cs" />
     <Compile Include="Assets\Scripts\PlayerShield.cs" />
@@ -130,6 +133,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
     <Compile Include="Assets\Scripts\Serwer.cs" />
     <Compile Include="Assets\Scripts\Opcje.cs" />
+    <Compile Include="Assets\Scripts\Forest\MinimapCameraForrest.cs" />
     <Compile Include="Assets\Scripts\Pause.cs" />
     <Compile Include="Assets\ScifiOfficeLite\Scripts\DemoFirstPersonController.cs" />
     <Compile Include="Assets\Scripts\Light.cs" />
@@ -142,7 +146,7 @@
     <None Include="Assets\Scripts\Znajdźki.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\WorldMaterialsFree\Shaders\WorldMatLiteFree.shader" />
-    <None Include="Assets\Materials\Pochodnia.shader" />
+    <None Include="Assets\Scripts\Pochodnia.shader" />
     <None Include="Assets\WorldMaterialsFree\Shaders\WorldMatFree.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
