poprawiona walka z bossem

--- a/Gra 3D/Assembly-CSharp.Player.csproj
+++ b/Gra 3D/Assembly-CSharp.Player.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
+    <Compile Include="Assets\Scripts\Ufo\UfoLight.cs" />
     <Compile Include="Assets\Scripts\Gun.cs" />
     <Compile Include="Assets\Scripts\MinimapLayerController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Assets\Scripts\Zagadkowy Przedmiot.cs" />
     <Compile Include="Assets\Scripts\Forest\MovingBear.cs" />
     <Compile Include="Assets\Scripts\Ufo\Boss.cs" />
+    <Compile Include="Assets\Scripts\Ufo\SerwerManager.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_DigitValidator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_FrameRateCounter.cs" />
     <Compile Include="Assets\Scripts\Interaction.cs" />
